// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OnSaleSection > should render to match snapshot when loading 1`] = `
<div>
  <section
    class="sc-hjsuWn bZerHe"
    id="on-sale"
  >
    <h2
      class="_fontQuicksandBold_2d2bfb _uPadding1r_2d2bfb _uFlex_2d2bfb _uAlignCenter_2d2bfb _uGap1r_2d2bfb"
    >
      <svg
        role="presentation"
        style="width: 3.75rem; height: 3.75rem;"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 12C14 13.1 13.1 14 12 14S10 13.1 10 12 10.9 10 12 10 14 10.9 14 12M7 10C5.9 10 5 10.9 5 12S5.9 14 7 14 9 13.1 9 12 8.1 10 7 10M17 10C15.9 10 15 10.9 15 12S15.9 14 17 14 19 13.1 19 12 18.1 10 17 10M14.5 6C13.4 6 12.5 6.9 12.5 8S13.4 10 14.5 10 16.5 9.1 16.5 8 15.6 6 14.5 6M9.5 6C8.4 6 7.5 6.9 7.5 8S8.4 10 9.5 10 11.5 9.1 11.5 8 10.6 6 9.5 6M14.5 14C13.4 14 12.5 14.9 12.5 16S13.4 18 14.5 18 16.5 17.1 16.5 16 15.6 14 14.5 14M9.5 14C8.4 14 7.5 14.9 7.5 16S8.4 18 9.5 18 11.5 17.1 11.5 16 10.6 14 9.5 14M12 18C10.9 18 10 18.9 10 20S10.9 22 12 22 14 21.1 14 20 13.1 18 12 18M14.4 2.2L13.6 1C11.4 2 11.2 5.6 11.2 6H12.7C12.8 5.2 13.1 2.7 14.4 2.2Z"
          style="fill: green;"
        />
      </svg>
      <span>
        On Sale Now
      </span>
    </h2>
    <div
      class="loading-container"
    >
      <div
        aria-busy="true"
        aria-label="three-dots-loading"
        class="sc-bRKDuR gGaiEA"
        data-testid="three-dots-loading"
        role="progressbar"
      >
        <svg
          data-testid="three-dots-svg"
          fill="#4fa94d"
          height="80"
          viewBox="0 0 120 30"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="15"
            cy="15"
            r="15"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="15"
              repeatCount="indefinite"
              to="15"
              values="15;9;15"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="1"
              repeatCount="indefinite"
              to="1"
              values="1;.5;1"
            />
          </circle>
          <circle
            attributeName="fill-opacity"
            cx="60"
            cy="15"
            from="1"
            r="9"
            to="0.3"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="9"
              repeatCount="indefinite"
              to="9"
              values="9;15;9"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="0.5"
              repeatCount="indefinite"
              to="0.5"
              values=".5;1;.5"
            />
          </circle>
          <circle
            cx="105"
            cy="15"
            r="15"
          >
            <animate
              attributeName="r"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="15"
              repeatCount="indefinite"
              to="15"
              values="15;9;15"
            />
            <animate
              attributeName="fill-opacity"
              begin="0s"
              calcMode="linear"
              dur="0.8s"
              from="1"
              repeatCount="indefinite"
              to="1"
              values="1;.5;1"
            />
          </circle>
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`OnSaleSection > should render to match snapshot when not loading 1`] = `
<div>
  <section
    class="sc-hjsuWn bZerHe"
    id="on-sale"
  >
    <h2
      class="_fontQuicksandBold_2d2bfb _uPadding1r_2d2bfb _uFlex_2d2bfb _uAlignCenter_2d2bfb _uGap1r_2d2bfb"
    >
      <svg
        role="presentation"
        style="width: 3.75rem; height: 3.75rem;"
        viewBox="0 0 24 24"
      >
        <path
          d="M14 12C14 13.1 13.1 14 12 14S10 13.1 10 12 10.9 10 12 10 14 10.9 14 12M7 10C5.9 10 5 10.9 5 12S5.9 14 7 14 9 13.1 9 12 8.1 10 7 10M17 10C15.9 10 15 10.9 15 12S15.9 14 17 14 19 13.1 19 12 18.1 10 17 10M14.5 6C13.4 6 12.5 6.9 12.5 8S13.4 10 14.5 10 16.5 9.1 16.5 8 15.6 6 14.5 6M9.5 6C8.4 6 7.5 6.9 7.5 8S8.4 10 9.5 10 11.5 9.1 11.5 8 10.6 6 9.5 6M14.5 14C13.4 14 12.5 14.9 12.5 16S13.4 18 14.5 18 16.5 17.1 16.5 16 15.6 14 14.5 14M9.5 14C8.4 14 7.5 14.9 7.5 16S8.4 18 9.5 18 11.5 17.1 11.5 16 10.6 14 9.5 14M12 18C10.9 18 10 18.9 10 20S10.9 22 12 22 14 21.1 14 20 13.1 18 12 18M14.4 2.2L13.6 1C11.4 2 11.2 5.6 11.2 6H12.7C12.8 5.2 13.1 2.7 14.4 2.2Z"
          style="fill: green;"
        />
      </svg>
      <span>
        On Sale Now
      </span>
    </h2>
    <div
      class="fruits-container"
    >
      <div>
        <span>
          Mango
        </span>
        <span>
          233
        </span>
        <button
          type="button"
        >
          Click Me
        </button>
      </div>
    </div>
  </section>
</div>
`;
